--- a/src/ui/components/route-music/template.hbs
+++ b/src/ui/components/route-music/template.hbs
@@ -23,6 +23,9 @@
             @activeSong={{activeSong}}
             @toggleOpened={{action toggleAlbumOpened}}
             @playProgressPercentage={{playProgressPercentage}}
+            @isOpening={{and (eq activeAlbum album) isAlbumOpening}}
+            @isClosing={{and (eq activeAlbum album) isAlbumClosing}}
+            @playSong={{action playSong}}
           />
         {{/each}}
       </div>
