--- a/src/ui/styles/components/_app-footer.scss
+++ b/src/ui/styles/components/_app-footer.scss
@@ -1,14 +1,28 @@
 .footer {
-  flex: 1;
-  vertical-align: middle;
-  display: flex;
-  align-items: center;
+  @include tablet {
+    flex: 1;
+    vertical-align: middle;
+    display: flex;
+    align-items: center;
+  }
 
   .__link-container {
-    margin: auto;
-    text-align: center;
-    display: flex;
-    max-width: 850px;
+    @include tablet {
+      margin: auto;
+      text-align: center;
+      display: flex;
+      max-width: 850px;
+    }
+
+    @include mobile {
+      max-width: 320px;
+      margin: auto;
+      margin-bottom: 100px;
+    }
+
+    @include mobile-tiny {
+      max-width: 210px;
+    }
   }
 
   .__link {
@@ -16,31 +30,23 @@
     text-indent: -9999px;
     overflow: hidden;
     flex: 1;
-    min-width: 109px;
+    min-width: 100px;
     height: 30px;
+    opacity: 0.4;
+    transition: opacity 200ms;
     background: {
       position: 50%;
       repeat: no-repeat;
       size: contain;
     }
-    opacity: 0.4;
-    transition: opacity 200ms;
 
     &:hover {
       opacity: 0.7;
     }
 
-    // @media (max-width: 768px) {
-    //   min-width: 0;
-    // }
-    //
-    // @media (max-width: 500px) {
-    //   height: 24px;
-    //   width: 50px;
-    // }
-    //
-    // @media (max-width: 380px) { height: 22px; }
-    // @media (max-width: 350px) { height: 18px; }
+    @include mobile {
+      height: 60px;
+    }
   }
 
   .__link--bandcamp {
