--- a/src/ui/styles/utils/_core.scss
+++ b/src/ui/styles/utils/_core.scss
@@ -8,7 +8,7 @@
 
 body {
   font-family: $font;
-  background-color: #151515;
+  background-color: $color-bg-dark;
 
   @include tablet {
     overflow: hidden;
