--- a/src/ui/components/music-album/template.hbs
+++ b/src/ui/components/music-album/template.hbs
@@ -1,4 +1,4 @@
-<div class="album album-{{albumIndex}}{{if isOpened ' is-opened'}}{{if @isOpening ' is-opening'}}{{if @isClosing ' is-closing'}}">
+<div class="album album-{{albumIndex}}{{if isOpened ' is-opened'}}{{if isOtherOpened ' is-other-opened'}}{{if @isOpening ' is-opening'}}{{if @isClosing ' is-closing'}}">
   <div class="__progress">
     <div class="__progress-indicator" style={{styleAttributeValue}}></div>
   </div>
