--- a/src/ui/components/music-player/template.hbs
+++ b/src/ui/components/music-player/template.hbs
@@ -5,6 +5,7 @@
     onpause={{action onAudioPause}}
     onplaying={{action onAudioPlaying}}
     ontimeupdate={{action onAudioTimeUpdate}}
+    volume="1"
     autoplay
   />
 
